--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,3 +17,7 @@ jobs:
       - run: npm install
       - run: npm test
       - run: npm run coverage
+      - name: Coveralls
+        uses: coverallsapp/github-action@master
+        with:
+          github-token: ${{ secrets.github_token }}
