--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 		"middleware"
 	],
 	"scripts": {
-		"coverage": "nyc report --reporter=text-lcov | coveralls",
+		"coverage": "nyc report --reporter=lcov",
 		"pretest": "eslint . --fix",
 		"test": "nyc mocha"
 	},
