--- a/package.json
+++ b/package.json
@@ -2,18 +2,16 @@
 	"name": "network-error-logging",
 	"version": "1.0.0",
 	"description": "NEL Middleware for Express",
-	"main": "index.js",
 	"keywords": [
-		"network-error-logging",
 		"NEL",
-		"express",
 		"connect",
-		"middleware"
+		"express",
+		"middleware",
+		"network-error-logging"
 	],
-	"scripts": {
-		"coverage": "nyc report --reporter=lcov",
-		"pretest": "eslint . --fix",
-		"test": "nyc mocha"
+	"homepage": "https://github.com/Cherry/network-error-logging#readme",
+	"bugs": {
+		"url": "https://github.com/Cherry/network-error-logging/issues"
 	},
 	"repository": {
 		"type": "git",
@@ -21,12 +19,15 @@
 	},
 	"license": "MIT",
 	"author": "James Ross <james@jross.me> (https://jross.me)",
-	"bugs": {
-		"url": "https://github.com/Cherry/network-error-logging/issues"
-	},
-	"homepage": "https://github.com/Cherry/network-error-logging#readme",
-	"engines": {
-		"node": ">=8"
+	"files": [
+		"lib",
+		"index.js"
+	],
+	"main": "index.js",
+	"scripts": {
+		"coverage": "nyc report --reporter=lcov",
+		"pretest": "eslint . --fix",
+		"test": "nyc mocha"
 	},
 	"devDependencies": {
 		"assert": "^2.0.0",
@@ -39,5 +40,8 @@
 		"mocha": "^6.2.1",
 		"nyc": "^14.1.1",
 		"supertest": "^4.0.2"
+	},
+	"engines": {
+		"node": ">=8"
 	}
 }
