--- a/package.json
+++ b/package.json
@@ -34,10 +34,11 @@
 		"connect": "^3.7.0",
 		"coveralls": "^3.0.9",
 		"eslint": "^6.8.0",
-		"eslint-config-nodecraft": "^2.0.1",
+		"eslint-config-nodecraft": "^2.1.2",
 		"eslint-plugin-json": "^2.1.0",
 		"eslint-plugin-node": "^11.0.0",
-		"mocha": "^7.0.1",
+		"eslint-plugin-vue": "^6.2.1",
+		"mocha": "^7.1.0",
 		"nyc": "^15.0.0",
 		"supertest": "^4.0.2"
 	},
