removed unecessary dep to correct some of the type errors in ts test

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
 		"strictNullChecks": true,
 		"strictFunctionTypes": true,
 		"typeRoots": ["types"],
-		"types": [],
+		"types": ["mocha"],
 		"noEmit": true,
 		"forceConsistentCasingInFileNames": true,
 		"esModuleInterop": true
