--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
 	},
 	"license": "MIT",
 	"author": "James Ross <james@jross.me> (https://jross.me)",
+	"main": "index.js",
+	"types": "types/index.d.ts",
 	"files": [
 		"lib",
 		"types",
 		"index.js"
 	],
-	"main": "index.js",
 	"scripts": {
 		"coverage": "nyc report --reporter=lcov",
 		"pretest": "eslint . --fix",
@@ -32,6 +33,7 @@
 		"test-ts": "ts-mocha -p ./tsconfig.json test/index.ts"
 	},
 	"devDependencies": {
+		"@nodecraft/eslint-config": "^7.6.0",
 		"@types/express": "^4.17.11",
 		"@types/mocha": "^8.2.2",
 		"@types/supertest": "^2.0.10",
@@ -39,7 +41,6 @@
 		"connect": "^3.7.0",
 		"coveralls": "^3.1.0",
 		"eslint": "^7.22.0",
-		"eslint-config-nodecraft": "^7.1.0",
 		"eslint-plugin-json": "^2.1.2",
 		"eslint-plugin-node": "^11.1.0",
 		"eslint-plugin-unicorn": "^29.0.0",
@@ -51,6 +52,5 @@
 	},
 	"engines": {
 		"node": ">=12"
-	},
-	"types": "types/index.d.ts"
+	}
 }
